kubernetes/media/jellyfin/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.lan.juusoleinonen.fi`)
      priority: 10
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: jellyfin-certificate
